--- a/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
@@ -52,7 +52,7 @@
           <div class="d-flex justify-content-between mb-2">
             <div class="pe-3">
               <div class="d-flex align-items-center mb-2">
-                <img class="rounded-circle me-1" src="../../../../../assets/img/37.png" width="48" alt="Avatar">
+                <img class="rounded-circle me-1" src="../../../../assets/img/37.png" width="48" alt="Avatar">
                 <div class="ps-2">
                   <h6 class="fs-base mb-0">{{shop.shop.businessName}}</h6>
                   <div class="text-muted fw-normal fs-sm">0765363828 | 0742213254</div>
