--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -213,7 +213,7 @@
                   placeholder="Quantity"
                   min="1"
                   required
-                  [(ngModel)]="item.itemQty" #itemQtyE="ngModel" name="itemQty"
+                  [(ngModel)]="item.quantity" #itemQtyE="ngModel" name="itemQty"
                 />
                 <div *ngIf="(itemQtyE.touched || baManageFormItemE.submitted) && itemQtyE.errors?.required"
                      class="validErr">
