--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.html
@@ -24,7 +24,9 @@
         <ul class="nav nav-pills pt-4 pt-md-2 pb-md-2 w-50" role="tablist">
           <li class="nav-item mb-md-0 me-md-2 pe-md-1"><a class="nav-link active" href="#client-following-view"
                                                           data-bs-toggle="tab" role="tab"><i
-            class="fi-building mt-n1 me-2 fs-base"></i> 10 Pending Orders</a></li>
+            class="fi-building mt-n1 me-2 fs-base"></i>
+            {{itemOrders.length}} Pending Order{{itemOrders.length>1?'s':''}}
+          </a></li>
         </ul>
       </div>
 
@@ -41,7 +43,7 @@
               <div class="d-flex justify-content-between mb-2">
                 <div class="pe-3">
                   <div class="d-flex align-items-center mb-2">
-                    <a class="btn btn-icon btn-warning btn-md shadow-sm rounded-circle me-2 mb-0" href="#"
+                    <a class="btn btn-icon btn-warning btn-md rounded-circle me-2 mb-0" href="#"
                        data-bs-toggle="tooltip" title="Order still in Pending status."
                        data-bs-original-title="Order still in Pending status."
                        aria-label="Order still in Pending status.">
@@ -49,7 +51,7 @@
                     <!-- <img class="rounded-circle me-1" src="./asset/img/37.png" width="48" alt="Avatar"> -->
                     <div class="ps-2">
                       <h6 class="fs-base mb-0">{{itemOrder.orderId}}</h6>
-                      <!--<div class="text-muted fw-normal fs-sm">Sent to 3 Shops</div>-->
+                      <div class="text-muted fw-normal fs-sm">{{itemOrder.orderDate}}</div>
                     </div>
                   </div>
                 </div>
@@ -94,7 +96,8 @@
                         <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">
                           {{orderDetail.orderDetailType==='Item'?orderDetail.item.name:orderDetail.orderDetailType==='ItemPackage'?orderDetail.itemPackage.name:''}}
                         </a></h3>
-                      <span *ngIf="orderDetail.orderDetailType==='Item'" class="badge rounded-pill bg-info"> Item </span>
+                      <span *ngIf="orderDetail.orderDetailType==='Item'"
+                            class="badge rounded-pill bg-info"> Item </span>
                       <span *ngIf="orderDetail.orderDetailType==='ItemPackage'" class="badge rounded-pill bg-success"> Package </span>
                     </div>
                     <div class="row cols-sm-2 row-cols-md-12"
@@ -109,7 +112,8 @@
                         </div>
                       </div>
                       <div class="col" style="padding: 0px">
-                        <p class="mb-1 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
+                        <p class="mb-1 fs-sm"
+                           style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
                           Total Price </p>
                         <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
                           LKR {{orderDetail.price * orderDetail.quantity}}
@@ -154,7 +158,7 @@
                 </div>
               </div>
               <footer class="d-flex justify-content-end">
-                <a href="#" class="btn btn-icon btn-danger btnhred btn-xs shadow-sm rounded-circle me-2 mb-2"
+                <a href="#" class="btn btn-icon btn-danger btnhred btn-xs rounded-circle me-2 mb-2"
                    data-bs-toggle="tooltip" title="Cancel Order" data-bs-original-title="Cancel Order"
                    aria-label="Cancel Order">
                   <i class="fi-x"></i>
