--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.css
@@ -18,3 +18,7 @@
   /*line-height: 2;*/
   font-size: 14px !important;
 }
+
+.shadow-sm{
+  box-shadow: 0 0.125rem 0.125rem -0.125rem #a8a8a8, 0 0.25rem 0.75rem #a8a8a8 !important
+}
