--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -96,7 +96,7 @@
             <a class="card-nav-link" href="#"
             ><i class="fi-help opacity-60 me-2"></i>Help</a
             >
-            <a class="card-nav-link" href="#"
+            <a class="card-nav-link" (click)="signOut()"
             ><i class="fi-logout opacity-60 me-2"></i>Sign Out</a
             >
           </div>
