--- a/Frontend/src/app/app-shop/view/business-register/br-step6/br-step6.component.html
+++ b/Frontend/src/app/app-shop/view/business-register/br-step6/br-step6.component.html
@@ -27,7 +27,7 @@
     <i class="fi-chevron-left fs-sm"></i> Previous step
   </button>
   <button type="submit" class="btn btn-primary btn-lg rounded-pill ms-sm-auto"
-          (click)="onSubmit()">
+          [routerLink]="''">
     Finish
   </button>
 </div>
