--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.css
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.css
@@ -15,3 +15,7 @@
 .col-info > div > div > span {
   /*line-height: 2;*/
 }
+
+.shadow-sm{
+  box-shadow: 0 0.125rem 0.125rem -0.125rem #a8a8a8, 0 0.25rem 0.75rem #a8a8a8 !important
+}
