--- a/Frontend/src/app/view/header/header.component.html
+++ b/Frontend/src/app/view/header/header.component.html
@@ -23,17 +23,17 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a
-      class="btn btn-sm text-primary d-none d-lg-block order-lg-3"
-      href="#signin-modal"
-      data-bs-toggle="modal"
-    ><i class="fi-user me-2"></i>Sign in</a
-    >
+    <!--<a-->
+      <!--class="btn btn-sm text-primary d-none d-lg-block order-lg-3"-->
+      <!--[routerLink]="''"-->
+      <!--data-bs-toggle="modal"-->
+    <!--&gt;<i class="fi-user me-2"></i>Sign in</a-->
+    <!--&gt;-->
     <a
       class="btn btn-primary btn-sm ms-2 order-lg-3"
-      href="#signup-modal" data-bs-toggle="modal"
-    ><i class="fi-plus me-2"></i>Sign<span class="d-none d-sm-inline">
-        up</span
+      [routerLink]="''"
+    ><i class="fi-user me-2"></i>Sign<span class="d-none d-sm-inline">
+        in</span
     ></a
     >
     <div class="collapse navbar-collapse order-lg-2" id="navbarNav">
