--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -29,3 +29,6 @@ carousel-item-next{
     transform: translateX(100%);
 }
 
+/*.shadow-sm{*/
+  /*box-shadow: 0 0.125rem 0.125rem -0.125rem #a8a8a8, 0 0.25rem 0.75rem #a8a8a8 !important*/
+/*}*/
