--- a/Frontend/src/app/app-customer/view/customer-register/cr-step1/cr-step1.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/cr-step1/cr-step1.component.html
@@ -1,1 +1,32 @@
-<p>cr-step1 works!</p>
+<form #crForm1="ngForm" (ngSubmit)="crForm1.form.valid && onSubmit()" novalidate>
+  
+  <!-- Step 1: User Info-->
+  <div class="bg-light rounded-3 p-4 p-md-5 mb-3">
+    <h2 class="h4 mb-4"><i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i>User info</h2>
+    <div class="row">
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-un">User name <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="cli-un" value="" placeholder="Enter your user name"
+               required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-ue">User email <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="email" id="cli-ue" value=""
+               placeholder="Enter your user email" required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-pass">Password<span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="password" id="cli-pass" value=""
+               placeholder="Enter your password" required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-cpass">Confirm Password <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="password" id="cli-cpass" value=""
+               placeholder="Re-Enter your password">
+      </div>
+
+    </div>
+
+  </div>
+
+</form>
