--- a/Frontend/src/app/view/login/login.component.html
+++ b/Frontend/src/app/view/login/login.component.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 px-4 pt-2 pb-4 px-sm-5 pb-sm-5 pt-md-5">
           <a class="btn btn-outline-info w-100 rounded-pill mb-3" [routerLink]="'/shop/header/business_register'"><i
             class="fi-shop fs-lg me-1"></i>Sign up as a Business</a>
-          <a class="btn btn-outline-info w-100 rounded-pill mb-3" href="./client-register-1step.html"><i
+          <a class="btn btn-outline-info w-100 rounded-pill mb-3" [routerLink]="'/customer/header/customer_register'"><i
             class="fi-user fs-lg me-1"></i>Sign up as a Customer</a>
           <div class="d-flex align-items-center py-3 mb-3">
             <hr class="w-100">
